--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,9 +13,10 @@
   </head>
 
   <body>
-  <%= render partial: "shared/navbar" %>
-  <div class="container">
-    <%= yield %>
+    <%= render partial: "shared/navbar" %>
+    <div class="container">
+      <%= render partial: "shared/flash" %>
+      <%= yield %>
     </div>
   </body>
 </html>
