--- a/app/views/tweets/_form.html.erb
+++ b/app/views/tweets/_form.html.erb
@@ -21,6 +21,6 @@
     <%= form.button "Schedule", class: "btn btn-primary" %>
     
     <% if form.object.persisted? %>
-    <%= button_to "Delete", form.object, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
+    <%= link_to "Delete", form.object, method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-outline-danger" %>
     <% end %>
 <% end %>
